...
                                                                <constraint firstAttribute="height" constant="30" id="4vY-hx-Vzg"/>
                                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CgV-2o-VOT" secondAttribute="trailing" constant="20" symbolic="YES" id="iBt-VY-nm8"/>
                                                            </constraints>
                                                        </view>
                                                        <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-xb-mkW">
                                                            <rect key="frame" x="317" y="0.0" width="44" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="44" id="WhK-sm-jfM"/>
                                                                <constraint firstAttribute="width" constant="44" id="xpp-0C-lZa"/>
                                                            </constraints>
                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <state key="normal" title="Button"/>
...
                                <connections>
                                    <outlet property="delegate" destination="p4Q-fP-1Qz" id="vsD-BW-YTb"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBx-y0-60r">
                                <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="dismissButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="1fe-k6-bGM"/>
                                    <constraint firstAttribute="width" constant="48" id="6ET-iP-SRX"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="height" constant="60" id="Lfg-BQ-JpE"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53U-qR-8dh">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="vRY-aR-CaQ"/>
                                </constraints>
                                <color key="tintColor" name="YPBlack"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
